Correct paragraph spacing

--- a/src/styles/hc-2018/ternary.styl
+++ b/src/styles/hc-2018/ternary.styl
@@ -134,7 +134,10 @@ input {
 p, li, a:not(h5 a) {
     line-height: 130%;
 }
-p:not(:last-child), li:not(:last-child) {
+p:not(:last-child) {
+    margin-bottom: 10pt;
+}
+li:not(:last-child) {
     margin-bottom: 6pt;
 }
 
